# nup

./: .gitignore  Makefile  Makefile.am  Makefile.define  Makefile.in  README.md  config.status  configure  configure.ac
app/05/: .Makefile.am.swp  Makefile  Makefile.am  Makefile.in  echocli.c  echocli1  echoserv1  echoserv2  sig_chld.c  str_cli1.c  str_echo1.c  str_echo2.c
app/05/.deps/: str_echo1.Po  str_echo2.Po
app/06/: Makefile  Makefile.am  Makefile.in  echocli1  echocli2  echoserv.c  echoserv1  echoserv2  echoserv2.c  echoserv3  echoserv3.c  str_cli1.c  str_cli2.c
app/07/: .Makefile.am.swp  .checkopts.c.swp  Makefile  Makefile.am  Makefile.in  checkopts  checkopts.c
app/08/: Makefile  Makefile.am  Makefile.in  dg_cli1.c  dg_cli2.c  dg_echo1.c  echocli.c  echocli1  echocli2  echoserv.c  echoserv1  echoserv2  echoserv2.c  sig_chld.c  str_echo.c
app/08/.deps/: dg_cli1.Po  dg_cli2.Po  dg_echo1.Po  echocli.Po  echoserv.Po  echoserv2.Po  sig_chld.Po  str_echo.Po
app/11/: Makefile  Makefile.am  Makefile.in  daytimetcpcli1  daytimetcpcli1.c  daytimetcpcli2  daytimetcpcli2.c  daytimetcpserv1  daytimetcpserv1.c  hostent  hostent.c
app/11/.deps/: daytimetcpcli1.Po  daytimetcpcli2.Po  daytimetcpserv1.Po  hostent.Po
autom4te.cache/: output.1  output.2  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
include/: apue.h  unp.h
intro/: Makefile  daytimetcpsev.c
lib/: Makefile
libs/: Makefile  Makefile.am  Makefile.in  str_echo.c  wrappthread.c
libs/.deps/: connect_nonb.Po  connect_timeo.Po  daemon_inetd.Po  daemon_init.Po  dg_cli.Po  dg_echo.Po  error.Po  family_to_level.Po  get_ifi_info.Po  gf_time.Po  host_serv.Po  hstrerror.Po  if_indextoname.Po  if_nameindex.Po  if_nametoindex.Po  in6addr_any.Po  mcast_get_if.Po  mcast_get_loop.Po  mcast_get_ttl.Po  mcast_join.Po  mcast_leave.Po  mcast_set_if.Po  mcast_set_loop.Po  mcast_set_ttl.Po  my_addrs.Po  pselect.Po  read_fd.Po  readable_timeo.Po  readline.Po  readn.Po  rtt.Po  signal.Po  signal_intr.Po  snprintf.Po  sock_bind_wild.Po  sock_cmp_addr.Po  sock_cmp_port.Po  sock_get_port.Po  sock_ntop.Po  sock_ntop_host.Po  (+21 more)
