INCLUDES=-I../../include
bin_PROGRAMS=echoserv1 echoserv2 echocli1

echoserv1_SOURCES=echoserv.c str_echo1.c sig_chld.c
echoserv1_LDADD=../../libs/libunp.a

echoserv2_SOURCES=echoserv.c str_echo2.c sig_chld.c
echoserv2_LDADD=../../libs/libunp.a

echocli1_SOURCES=echocli.c str_echo1.c
echocli1_LDADD=../../libs/libunp.a
