INCLUDES=-I../../include
bin_PROGRAMS=echoserv1 echoserv2 echoserv3 echocli1 echocli2

echoserv1_SOURCES=echoserv.c str_echo1.c sig_chld.c
echoserv1_LDADD=../../libs/libunp.a

echoserv2_SOURCES=echoserv2.c 
echoserv2_LDADD=../../libs/libunp.a

echoserv3_SOURCES=echoserv3.c 
echoserv3_LDADD=../../libs/libunp.a

echocli1_SOURCES=echocli.c str_cli1.c
echocli1_LDADD=../../libs/libunp.a

echocli2_SOURCES=echocli.c str_cli2.c
echocli2_LDADD=../../libs/libunp.a
