INCLUDES=-I../../include
bin_PROGRAMS=hostent daytimetcpcli1 daytimetcpcli2 daytimetcpserv1

hostent_SOURCES=hostent.c
hostent_LDADD=../../libs/libunp.a

daytimetcpcli1_SOURCES=daytimetcpcli1.c
daytimetcpcli1_LDADD=../../libs/libunp.a

daytimetcpcli2_SOURCES=daytimetcpcli2.c
daytimetcpcli2_LDADD=../../libs/libunp.a

daytimetcpserv1_SOURCES=daytimetcpserv1.c
daytimetcpserv1_LDADD=../../libs/libunp.a
